fix: dialog content vertically off-center
Likely caused by version upgrade

--- a/src/app/shared/components/dialog/csv-upload-dialog/csv-upload-dialog.component.scss
+++ b/src/app/shared/components/dialog/csv-upload-dialog/csv-upload-dialog.component.scss
@@ -4,7 +4,7 @@
 }
 
 // Hide unnecessary elements that come with primeng file upload
-::ng-deep .p-fileupload-buttonbar, ::ng-deep p-messages, ::ng-deep p-progressbar {
+::ng-deep .p-fileupload-buttonbar, ::ng-deep p-messages, ::ng-deep p-progressbar, ::ng-deep .p-fileupload-header {
     @apply tw-hidden #{!important};
 }
 
